--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "nodemon server/app.js",
     "client":"npm start --prefix client",
-    "dev":"concurrently \"npm run client\" \"npm start\" ",
+    "dev":"concurrently \"npm run client\" \"npm start\" "
   },
   "keywords": [],
   "author": "",
