--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 
   },
   "scripts": {
-    "start": "nodemon server/app.js",
+    "start": "node server/app.js",
     "client":"npm start --prefix client",
     "dev":"concurrently \"npm run client\" \"npm start\" "
   },
