--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "scripts": {
     "start": "node server/app.js",
+    "server":"nodemon server.js",
     "client":"npm start --prefix client",
-    "dev":"concurrently \"npm run client\" \"npm start\" "
+    "dev":"concurrently \"npm run client\" \"npm server\" "
   },
   "keywords": [],
   "author": "",
