--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,10 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "remixicon": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
